--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
   <div class = "hero-div center container">
       <h1 class = "animate__animated animate__fadeInDown animate__slow">Welcome to Ennovation LLC</h1>
-      <h2 class = "animate__animated animate__fadeInUp animate__slow">At Ennovation, we go beyond expectations, delivering top-notch auto and marine parts through innovation, advanced tech, and unwavering quality, fostering lasting success and satisfaction in our sectors.</h2>
+      <h2 class = "animate__animated animate__fadeInUp animate__slow">At Ennovation, We Go Beyond Expectations, Delivering Top-Notch Auto And Marine Parts, Providing Technology And Smart City Solutions, Spares And Maintenance For Various Automotive, Shipping Vessels In Oil And Gas, And Various Products And Services In Defense And Security Through Innovation, Advanced Tech, And Unwavering Quality, Fostering Lasting Success And Satisfaction In Our Sectors.</h2>
 
       <div class = "hero-btns animate__animated animate__fadeInUp animate__slow">
           <button type = "button" class = "btn-trans" id="learn-more-btn">learn more</button>
