--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <link rel = "stylesheet" href = "resources/animate.css-main/animate.css">
     
-    <link rel="stylesheet" href="Backup.css">
+    <link rel="stylesheet" href="index.css">
    
     <script src = "resources/jquery-3.5.1.js"></script>
    
