--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <h2>Information Technology (ESG)</h2>
             <div class = "line"></div>
             <p class = "text">
-              Firms like ours excel in delivering holistic solutions that merge IT financial and management consulting expertise with a strong emphasis on embedding Environmental, Social, and Governance (ESG) principles. </p>
+              We provide IT related solutions such as cyber security, ERP and other related services. Firms like ours excel in delivering holistic solutions that merge IT financial and management consulting expertise with a strong emphasis on embedding Environmental, Social, and Governance (ESG) principles. </p>
             </div>
 
             <div class = "service-item wow animate__animated animate__fadeInUp animate__slow">
