--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
             <li class = "nav-item">
               <a href = "#smartcity" class = "nav-link">Smart City</a>
             </li>
-
-            <li class = "nav-item">
-              <a href = "#manpower" class = "nav-link">Manpower</a>
-            </li>
 -->
+            <li class = "nav-item">
+              <a href = "#manpower" class = "nav-link">Our Purpose</a>
+            </li>
+
             <li class = "nav-item">
               <a href = "#brands" class = "nav-link">Brands</a>
             </li>
