--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         </div>
         <div class = "about-right wow animate__animated animate__fadeInUp animate__slow">
           <div class = "title">
-            <h2>Vision and Mission</h2>
+            <h2>Our Purpose</h2>
             <p class = "text">Redefining Industry Through Innovation and Commitment.</p>
           </div>
   
